Implement Asset API
